@@ -486,12 +486,12 @@ int csoundCompile(void *csound, int argc, char **argv)
       err_printf(Str(X_1179,"scorename: %s\n"), scorename);
     if (xfilename != NULL)
       err_printf(Str(X_1386,"xfilename: %s\n"), xfilename);
-#if defined(SYS5) || defined(WIN32) || defined(__EMX__)
+#if defined(WIN32) || defined(__EMX__)
     {
       if (O.odebug) setvbuf(stdout,0,_IOLBF,0xff);
     }
 #else
-#if !defined(SYMANTEC) && !defined(mac_classic) && !defined(LATTICE)
+#if !defined(SYMANTEC) && !defined(mac_classic)
     if (O.odebug) setlinebuf(stdout);
 #endif
 #endif
